# nosk-playground

./: CHANGELOG.md  cabal.project  noskero.cabal  notes.txt
app/: Common.hs  Main.hs
app/Mono/: Expr.hs
app/Poly/: Associate.hs  Check.hs  Compile.hs  Flattened.hs  Rename.hs  Resolved.hs  Syntax.hs  Token.hs  Typecheck.hs  Typed.hs  Unchained.hs  Unresolved.hs
app/Poly/Optimize/: DeadCodeElimination.hs
example/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt
